--- a/src/components/Select/_style.scss
+++ b/src/components/Select/_style.scss
@@ -18,5 +18,9 @@
                 background-color: #f5f5f5;
             }
         }
+        .no-data {
+            text-align: center;
+            color: #ccc;
+        }
     }
 }
