--- a/src/components/Input/_style.scss
+++ b/src/components/Input/_style.scss
@@ -2,6 +2,7 @@
     width: 100%;
     box-sizing: border-box;
     position: relative;
+    background-color: #fff;
     .wg-input-inner{
         border: 1px solid #ccc;
         width: 100%;
