--- a/src/pages/home/scan.scss
+++ b/src/pages/home/scan.scss
@@ -3,34 +3,21 @@
     padding: 0px;
     box-sizing: border-box;
 }
-span {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    display: inline-block;
-}
 .selectGroup {
-    position: relative;
-    input {
-        
+    display: flex;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+    height: 35px;
+    align-items: center;
+    padding: 0 5px;
+    label {
+        width: 90px;
+    }
+    div {
+        flex: 1;
     }
 }
-.select-content {
-    position: absolute;
-    top: 25px;
-    left: 3px;
+.scan {
+    padding: 10px;
     background-color: #fff;
-    box-shadow: 0px 0px 10px #aaaaaa;
-    min-width: 120px;
-    padding: 10px 0;
-    list-style: none;
-    li {
-        padding: 5px 10px;
-    }
-    li:active{
-        background-color: #eaeaea;
-    }
-}
-.noData {
-    color: #ccc;
 }
