--- a/src/pages/home/scan.scss
+++ b/src/pages/home/scan.scss
@@ -3,13 +3,24 @@
     padding: 0px;
     box-sizing: border-box;
 }
+.scan {
+    padding: 10px;
+    background-color: #fff;
+    height: 100vh;
+}
+.box {
+    width: 95%;
+    box-shadow: 0px 0px 10px #ccc;
+    margin: 0 auto;
+    padding:  10px;
+    border-radius: 10px;
+}
 .selectGroup {
     display: flex;
     width: 100%;
     border-bottom: 1px solid #ddd;
-    height: 35px;
+    height: 40px;
     align-items: center;
-    padding: 0 5px;
     label {
         width: 90px;
     }
@@ -17,7 +28,14 @@
         flex: 1;
     }
 }
-.scan {
-    padding: 10px;
-    background-color: #fff;
+.am-switch .checkbox {
+    width: 40px;
+    height: 25px;
+}
+.am-switch .checkbox:after{
+    width: 21px;
+    height: 21px;
+}
+.am-switch input[type="checkbox"]:checked + .checkbox:after {
+    transform: translateX(16px);
 }
