--- a/src/components/Select/_style.scss
+++ b/src/components/Select/_style.scss
@@ -12,7 +12,9 @@
             padding: 0px;
             margin: 0px;
             height: 30px;
-            line-height: 30px;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
             padding: 0 10px;
             &:hover {
                 background-color: #f5f5f5;
