--- a/src/components/Select/_style.scss
+++ b/src/components/Select/_style.scss
@@ -11,11 +11,11 @@
             width: 100%;
             padding: 0px;
             margin: 0px;
-            height: 30px;
+            min-height: 30px;
             display: flex;
             flex-wrap: wrap;
             align-items: center;
-            padding: 0 10px;
+            padding: 3px 10px;
             &:hover {
                 background-color: #f5f5f5;
             }
