--- a/src/components/Select/_style.scss
+++ b/src/components/Select/_style.scss
@@ -2,6 +2,7 @@
     background-color: #fff;
     box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
     padding: 5px 0;
+    overflow-y: scroll;
     .wg-select-dropdown-list {
         width: 100%;
         padding: 0px;
