--- a/src/pages/centre/index.scss
+++ b/src/pages/centre/index.scss
@@ -6,7 +6,7 @@
     float: left;
     width: 30%;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
     font-size: 0.27rem;
     background-color: #ececec;
     color: #666666;
@@ -18,7 +18,7 @@
     float: left;
     width: 70%;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
     padding-bottom: 16px;
 }
 .leftItem {
