--- a/src/pages/home/scan/index.scss
+++ b/src/pages/home/scan/index.scss
@@ -21,10 +21,10 @@
     border-bottom: 1px solid #ddd;
     height: 40px;
     align-items: center;
-    label {
-        width: 90px;
+    &>label {
+        width: 70px;
     }
-    div {
+    &>div {
         flex: 1;
     }
 }
@@ -38,4 +38,12 @@
 }
 .am-switch input[type="checkbox"]:checked + .checkbox:after {
     transform: translateX(16px);
+}
+
+.date-picker-list .am-list-item .am-list-line .am-list-extra {
+    flex-basis: initial;
+}
+.am-switch .checkbox:before {
+    width: 36px!important;
+    height: 21px!important;
 }
